--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11-touchscreen-calibrator (0.2-2) unstable; urgency=medium
+
+  * Fix compiler-flags-hidden warning.
+
+ -- Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>  Sat, 13 Sep 2014 19:12:55 +0800
+
 x11-touchscreen-calibrator (0.2-1) unstable; urgency=medium
 
   * Sync to v0.2 release.
